Fixes the GitHub button on mobile in docs

--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -42,10 +42,7 @@ $sidebar-width: 14rem;
     right: 1.5rem;
     top: 1rem;
     width: 14rem;
-  }
-
-  .algolia-autocomplete {
-    flex: 1 1 auto;
+    justify-content: end;
   }
 }
 
